# pyfabrik

./: .editorconfig  .gitignore  LICENSE  Makefile  Pipfile  README.md  README.rst  pyproject.toml  setup.py  test.py
pyfabrik/: __init__.py
tests/: test_pyfabrik.py
