[tool.poetry]
name = "pyfabrik"
version = "0.4.0"
description = "Python 3 implementation of FABRIK (Forward And Backward Reaching Inverse Kinematics) algorithm."
authors = ["Saša Savić <sasa@savic.one>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/saleone/pyfabrik"
repository = "https://github.com/saleone/pyfabrik"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]

[tool.poetry.dependencies]
python = "^3.6"
vectormath = "^0.2.2"

[tool.poetry.dev-dependencies]
ipython = "^7.10"
pytest = "^5.3"
mypy = "^0.761.0"
black = {version = "^18.3-alpha.0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
