[project]
name = "pyfabrik"
version = "0.5.0-dev1"
description = "Python 3 implementation of FABRIK (Forward And Backward Reaching Inverse Kinematics) algorithm."
authors = [
    { name = "Saša Savić", email = "sasa@savic.one" }
]
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.6"

dependencies = [
    "vectormath>=0.2.2"
]

[project.urls]
homepage = "https://github.com/saleone/pyfabrik"
repository = "https://github.com/saleone/pyfabrik"

[dependency-groups]
dev = [
    "ipython>=7.10",
    "pytest>=5.3",
    "mypy>=0.761.0",
    "black>=18.3a0"
]

[build-system]
requires = ["setuptools", "wheel", "uv"]
build-backend = "setuptools.build_meta"
